Ensure the password doesn't ovelap with the password visibility toggle DAGSS-12201

--- a/node-app/src/views/core/components/content/sign-in/style.scss
+++ b/node-app/src/views/core/components/content/sign-in/style.scss
@@ -77,6 +77,7 @@
 
             .password-input {
                 margin-bottom: 16px;
+                padding-right: 47px;
             }
 
             .btn.btn-blue {
